# LM_filterbank

./: CMakeLists.txt  README.md  dataset_main.cpp  main.cpp  test_proposal.kdev4
.kdev4/: test_proposal.kdev4
include/: compute_histogram.h  filter_bank.h  image_blend.h  segment_dirt.h  texture_recog.h
src/: compute_histogram.cpp  filter_bank.cpp  image_blend.cpp  segment_dirt.cpp  texture_recog.cpp
